@@ -1,5 +1,7 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2006-07-08 patrick     Added support for building universal binaries on Mac
+                       OS X.
 2005-12-11 patrickh    Added tweek::SubjectManagerImpl::hasSubject().
 
 [1.0.1 released - 8.29.2005]===================================================
